kubernetes/deployment-template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mesh
  labels:
    app: mesh
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mesh
  template:
    metadata:
      labels:
        app: mesh
    spec:
      containers:
      - name: nginx
        image: ${OKTETO_BUILD_NGINX_IMAGE}
      dnsConfig:
        searches:
          - ${OKTETO_NAMESPACE}.svc.cluster.local
          - ${OKTETO_SHARED_NAMESPACE}.svc.cluster.local
          - svc.cluster.local
          - cluster.local
