kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mesh
  labels:
    app: mesh
spec:
  type: ClusterIP
  ports:
  - name: mesh
    port: 80
    targetPort: 80
  selector:
    app: mesh
